--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "df-client",
-  "productName": "Dead Frontier",
+  "productName": "Secrolink",
   "version": "1.0.0",
-  "description": "",
+  "description": "Unofficial Dead Frontier 3D Desktop Client",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^37.2.3",
+    "electron-builder": "^26.0.12",
     "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
