--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
+    "start": "set NODE_ENV=development && electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
