--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "secrolink",
   "productName": "Secrolink",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Unofficial Dead Frontier 3D Desktop Client",
   "main": "main.js",
   "scripts": {
@@ -25,7 +25,7 @@
     }
   },
   "keywords": [],
-  "author": "",
+  "author": "CurlCreep",
   "license": "ISC",
   "devDependencies": {
     "electron": "^37.2.3",
@@ -33,6 +33,7 @@
     "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
-    "electron-store": "^10.1.0"
+    "electron-store": "^10.1.0",
+    "electron-updater": "^6.6.2"
   }
 }
